--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "MySQLConnection": {
+    "MySQLConnectionString": "Server=localhost;DataBase=rest_with_asp_net_udemy;Uid=root;Pwd=docker"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
